frameworks: Rquests permission for accessing downloaded files
Allowing systemUI to share downloaded files with RecntsPanelView
via granted permission request ACCESS_ALL_DOWNLOADS.

Change-Id: If7a137639ed69c43cf7736756abe0f1b98442010

Conflicts:
	packages/SystemUI/AndroidManifest.xml

Conflicts:
	packages/SystemUI/AndroidManifest.xml

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -94,6 +94,9 @@
     <!-- Active display -->
     <uses-permission android:name="android.permission.SYSTEM_NOTIFICATION_LISTENER" />
 
+    <!-- DownloadProvider -->
+    <uses-permission android:name="android.permission.ACCESS_ALL_DOWNLOADS" />
+
     <application
         android:persistent="true"
         android:allowClearUserData="false"
